# Solana-coin

./: .gitignore  00_START_HERE.txt  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEVNET_DEPLOYMENT.md  DOCUMENTATION_INDEX.md  GITHUB_QUICK_START.txt  GITHUB_SETUP.md  MAINNET_READINESS.md  MANIFEST.md  PHASE_2A_IMPLEMENTATION.md  PHASE_2B_SUMMARY.md  PROGRESS-1.md  PROGRESS.md  QUICK_START.md  README.md  SECURITY_AUDIT.md  SESSION_4_SUMMARY.md  SESSION_4_SUMMARY.txt  STAKING_YIELD_GUIDE.md  SUMMARY.md  TESTING_GUIDE.md  build-and-deploy.sh  push-to-github.sh
.github/workflows/: build.yml
ecosystem-token/: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  TRIGGER.md
ecosystem-token/.github/workflows/: build-deploy.yml  build.yml
ecosystem-token/dashboard/: .env.example  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
ecosystem-token/dashboard/src/app/: globals.css  layout.tsx  page.tsx
ecosystem-token/dashboard/src/app/admin/: page.tsx
ecosystem-token/dashboard/src/app/analytics/: page.tsx
ecosystem-token/dashboard/src/app/treasury/: page.tsx
ecosystem-token/dashboard/src/hooks/: useEcosystemToken.ts
ecosystem-token/dashboard/src/lib/: wallet.tsx
ecosystem-token/programs/ecosystem-token/: Cargo.toml
ecosystem-token/programs/ecosystem-token/src/: aave.rs  errors.rs  instructions.rs  investment_instructions.rs  lib.rs  morpho.rs  rwa.rs  state.rs  yield_strategy.rs
