[workspace]
members = ["programs/ecosystem-token"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
rust_decimal = { version = "1.27", features = ["maths"] }

# Required explicitly by Anchor 0.30+ (previously implicit-enabled by anchor init
# scaffolding, now must be declared). Also a Rule 8 requirement: this contract
# handles token minting/burning/yield math where silent integer overflow would be
# a critical financial bug, not just a crash — must panic loudly instead.
[profile.release]
overflow-checks = true
