[workspace]
members = ["programs/ecosystem-token"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
# Bumped from 3.5.0/1.1.3 (Anchor 1.0.2 upgrade cleanup) — those old SPL
# client versions required curve25519-dalek ^3.2.1 -> zeroize <1.4, which
# directly conflicts with anchor-spl 1.0.2's pull of solana-zk-sdk 4.0.0 ->
# zeroize ^1.7 (mathematically unsatisfiable together — confirmed via CI's
# own explicit cargo resolver error, not a syntax/toolchain issue). The
# user's local `cargo check` (on the pre-upgrade 0.30.1 stack) already
# flagged available modern versions: spl-token v9.0.0, spl-associated-
# token-account v8.0.0. Bumped to those major lines.
spl-token = "9"
spl-associated-token-account = "8"

# Required explicitly by Anchor 0.30+ (previously implicit-enabled by anchor init
# scaffolding, now must be declared). Also a Rule 8 requirement: this contract
# handles token minting/burning/yield math where silent integer overflow would be
# a critical financial bug, not just a crash — must panic loudly instead.
[profile.release]
overflow-checks = true
