[package]
name = "ecosystem_token"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
rust_decimal = { workspace = true }
# NOTE: the indexmap/hybrid-array/bytemuck version pins that were here
# (Session 9, fixes #21/#22/#31) were calibrated against the OLD anchor-spl
# 0.30.1 dependency graph. After upgrading to anchor-spl 1.0.2 (which pulls
# in substantially different transitive versions, e.g. spl-token-group-
# interface 0.7.1 requiring bytemuck ^1.23.2 — directly conflicting with our
# old =1.19.0 pin), those pins are stale and removed rather than patched
# individually, since cargo only reports the FIRST unsatisfiable conflict —
# there could be more hidden behind it. Letting the resolver work fresh
# against the new graph; will re-pin specific crates only if new SBF-
# specific compatibility errors actually surface for the versions it
# naturally resolves to.

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
