[package]
name = "ecosystem_token"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
# indexmap/hybrid-array/bytemuck pins (fixes #21/#22/#31) were removed above
# when upgrading to anchor-spl 1.0.2, since they conflicted with 1.0.2's new
# transitive requirements (bytemuck/spl-token/spl-associated-token-account
# all needed real version bumps, done separately, above). indexmap itself
# has no such conflict in the new graph — it just naturally resolves to a
# version too new for Solana's bundled SBF compiler (const_mut_refs, use<>
# bounds, etc. — the same category fixed repeatedly earlier this session).
# Re-pinning to the same known-good version, recalibrated for the new graph:
# if 2.2.6 doesn't fit, cargo generate-lockfile will say so immediately and
# explicitly (no error-swallowing), same as it did for the real bytemuck/
# zeroize conflicts.
indexmap = "=2.2.6"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
