[package]
name = "ecosystem_token"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
# indexmap pin REMOVED (confirmed impossible): anchor-lang 1.0.2 itself now
# hard-requires indexmap >=2.3.0 (via anchor-derive-serde -> proc-macro-crate
# -> toml_edit 0.23.2) -- confirmed via cargo's own explicit resolver error,
# which listed all 19 available versions >=2.3.0 and confirmed every one
# conflicts with our old =2.2.6 pin. Unlike the earlier bytemuck/spl-token
# conflicts (real, unrelated crates), this one is unresolvable: 2.2.6 < 2.3.0
# can never satisfy a >=2.3.0 floor, no matter what version we try.
#
# This is fine now: our vendor-patch layer (build.yml) was originally pinning
# indexmap specifically to dodge unstable syntax (const_mut_refs, lifetime-
# annotated &mut, use<> bounds) in its newer releases. Those patches have
# since been generalized (not tied to a specific version/line number) and
# already fixed to handle exactly these constructs -- letting cargo resolve
# indexmap naturally (currently 2.14.0) should now be caught correctly by
# patches that already work, rather than needing a version pin at all.

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
